tests/invalid/dict_subscript_aug_value_type_change/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 10}
    d[1] += 0.5


if __name__ == "__main__":
    run_case()
